fix spacing in single column format for h1

--- a/project.css
+++ b/project.css
@@ -313,6 +313,9 @@ hr {
     width: 100%;
     margin-bottom: 8px;
   }
+  .center > h1 {
+    margin-top: 4em;
+  }
   .center-whole {
     width: 100%;
     margin-left: auto;
